height of home-page banners to 80vh, and correct center vertical align

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -8279,7 +8279,7 @@ body {
 .item {
   background: url("../images/home/banner-recrutamento.jpg") no-repeat top center;
   background-size: cover;
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   display: flex;
   align-items: center; }
@@ -8386,29 +8386,29 @@ body {
 #container-photo {
   background: url("../images/home/banner-middle.jpg") no-repeat center center;
   background-size: cover;
-  height: 100vh;
+  height: 80vh;
   width: 100%; }
   #container-photo #transparent-div {
     height: 100%;
     background-color: rgba(140, 45, 25, 0.7);
-    padding: 20px; }
+    padding: 20px;
+    display: flex;
+    align-items: center; }
     @media (min-width: 768px) {
       #container-photo #transparent-div {
         width: 40%; } }
     @media (max-width: 767px) {
       #container-photo #transparent-div {
         width: 100%; } }
-    #container-photo #transparent-div #transparent-div-info {
-      margin-top: 40%; }
-      @media (min-width: 768px) {
-        #container-photo #transparent-div #transparent-div-info {
-          width: 85%;
-          margin-left: 15%;
-          margin-right: 0; } }
-      @media (max-width: 767px) {
-        #container-photo #transparent-div #transparent-div-info {
-          margin-left: 10%;
-          margin-right: 10%; } }
+    @media (min-width: 768px) {
+      #container-photo #transparent-div #transparent-div-info {
+        width: 85%;
+        margin-left: 15%;
+        margin-right: 0; } }
+    @media (max-width: 767px) {
+      #container-photo #transparent-div #transparent-div-info {
+        margin-left: 10%;
+        margin-right: 10%; } }
     #container-photo #transparent-div .left {
       margin-left: 0;
       width: 20% !important; }
