--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -2,10 +2,13 @@
 $font-size-base: 14px;
 $font-size-header: 18px;
 $font-size-header-title: 40px;
-$font-type: 'Montserrat', sans-serif;
-$font-type-body: 'Merriweather', serif;
+$font-type: 'Montserrat',
+sans-serif;
+$font-type-body: 'Merriweather',
+serif;
 $nav-bar-heigth: 75px;
 $header-height: 60vh;
+$home-banner: 80vh;
 $dividor-height: 15vh;
 $footer-height: 230px;
 $primary-color: #8C2D19;
